[design]: Added styles.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,14 +1,56 @@
 {{> head }}
 
-{{> navbar }}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="todolist not-done">
+                <h1>To-Do's</h1>
+                <input id="description-to-do" type="text" class="form-control" placeholder="Add todo">
+                <br>
+                <button class="btn btn-success" onclick="Todo.addTodo()">Add Todo</button>
 
-<div class="jumbotron">
-    <h1 class="display-4">Hello, {{ capitalizar nombre }}!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-        featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                <hr>
+                <input type="text" class="form-control" placeholder="Search To-Do...">
+                <br>
+                <ul id="sortable" class="list-unstyled">
+                    <li class="ui-state-default">
+                        <row class="row">
+                            <div class="col-md-3">
+                                <select>
+                                    <option>Open</option>
+                                    <option>In-Progress</option>
+                                    <option>Completed</option>
+                                    <option>Archived</option>
+                                </select>
+                            </div>
+                            <div class="col-md-9">
+                                Take out the trash
+                            </div>
+                        </row>
+                    </li>
+                    <li class="ui-state-default">
+                        Buy bread
+                    </li>
+                    <li class="ui-state-default">
+                        Teach penguins to fly
+                    </li>
+                </ul>
+                <div class="todo-footer">
+                    <strong><span class="count-todos"></span></strong> Items Left
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <div class="todolist">
+                <h1>Already Complete</h1>
+                <ul id="done-items" class="list-unstyled">
+                    <li>Some item <button class="remove-item btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-remove"></span></button></li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 
 {{> footer }}
