--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Home | Demo</title>
+    <script src="assets/js/jquery-1.11.1.min.js"></script>
+    <title>Todo List</title>
 </head>
 <body>
