--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -44,8 +44,6 @@ li.ui-state-default:last-child{
     margin-top:10px;
 }
 
-@import "bourbon";
-
 body {
     background: #eee !important;
 }
@@ -60,7 +58,8 @@ body {
     padding: 15px 35px 45px;
     margin: 0 auto;
     background-color: #fff;
-    border: 1px solid rgba(0,0,0,0.1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
 
 .form-signin-heading,
 .checkbox {
@@ -76,12 +75,8 @@ body {
     font-size: 16px;
     height: auto;
     padding: 10px;
-@include box-sizing(border-box);
-
-&:focus {
-     z-index: 2;
- }
 }
+
 
 input[type="text"] {
     margin-bottom: -1px;
@@ -93,5 +88,4 @@ input[type="password"] {
     margin-bottom: 20px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-}
 }
