--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -73,7 +73,7 @@ body {
 .form-control {
     position: relative;
     font-size: 16px;
-    height: auto;
+    /*height: auto;*/
     padding: 10px;
 }
 
