[feat]: Added loading.gif.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -36,8 +36,9 @@
                 </div>
 
                 <br>
-                <button class="btn btn-success" onclick="Todo.addTodo()">Add Todo</button>
-
+                <button class="btn btn-info" onclick="Todo.addTodo()">Add Todo</button>
+                <br>
+                <div id="message" align="center"></div>
                 <hr>
                 <input type="text" class="form-control" placeholder="Search To-Do...">
                 <br>
