[feat]: Added save To-Do.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -36,8 +36,8 @@
                 </div>
 
                 <br>
-                <button class="btn btn-info" onclick="Todo.addTodo()">Add Todo</button>
-                <br>
+                <button class="btn btn-info" onclick="Api.Todo.addTodo()">Add Todo</button>
+                <br><br>
                 <div id="message" align="center"></div>
                 <hr>
                 <input type="text" class="form-control" placeholder="Search To-Do...">
