--- a/views/home.hbs
+++ b/views/home.hbs
@@ -40,7 +40,7 @@
                 <br><br>
                 <div id="message" align="center"></div>
                 <hr>
-                <input type="text" class="form-control" placeholder="Search To-Do...">
+                <input type="text" class="form-control" placeholder="Search To-Do..." onkeyup="Api.Todo.showTable(this.value)">
                 <br>
                 <table class="table table-striped table-bordered" id="table-to-do">
                     <thead>
